--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "@types/lodash": "^4.17.13",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
