--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/lodash": "^4.17.13",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
