--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@types/lodash": "^4.17.13",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
