--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.3.0",
-    "@mui/x-date-pickers": "^7.23.3",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.3.0",
+    "@mui/x-date-pickers": "^7.23.3",
     "@reduxjs/toolkit": "^2.4.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^4.36.1",
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^11.0.2",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
