--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "i18next": "^24.2.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-i18next": "^15.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^11.0.2",
